enhanced code (update in apis to use descriptive names, update in services to make it more readable, separate methods that call product-service in a class 'RestTemplatClient', separate the url of the product-service and the corsConfig in class 'WebConfig'